# job-tracker

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  security.yml
alembic/: env.py
alembic/versions/: 0b84e7247eb1_add_job_type_and_qualification_enums.py  14446a40402c_add_users_table.py  f863569fa14a_add_skills_and_job_skills_tables.py  fc4a59b7e078_initial_migration.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: applications.ts  auth.ts  client.ts  companies.ts  interviews.ts  jobs.ts  skills.ts
frontend/src/components/: Navbar.tsx
frontend/src/context/: ToastContext.tsx
frontend/src/pages/: Applications.tsx  ApplicationsDetail.tsx  Companies.tsx  Dashboard.tsx  Interviews.tsx  Jobs.tsx  Login.tsx  Register.tsx
frontend/src/types/: index.ts
src/app/: config.py  main.py
src/app/crud/: application.py  company.py  interview.py  job.py
src/app/models/: application.py  company.py  interview.py  job.py  skill.py  user.py
src/app/routers/: application.py  auth.py  company.py  interview.py  job.py  skill.py
src/app/schemas/: application.py  auth.py  company.py  interview.py  job.py  skill.py
src/app/services/: auth.py
tests/: conftest.py  test_applications.py  test_auth.py  test_companies.py  test_interviews.py  test_jobs.py
