[project]
name = "job-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "bcrypt",
    "pyjwt",
    "pydantic-settings",
]

[dependency-groups]
dev = ["ruff", "mypy", "pytest", "pip-audit", "bandit"]