[project]
name = "job-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "bcrypt",
    "pyjwt",
    "pydantic-settings>=2.14.2",
    "email-validator",
    "starlette>=1.3.1",
    "httpx2",
    "msgpack>=1.2.1",
]

[dependency-groups]
dev = ["ruff", "mypy", "pytest", "pip-audit", "bandit", "alembic"]

[tool.mypy]
python_version = "3.13"

[[tool.mypy.overrides]]
module = ["app.models.*"]
ignore_errors = true
